--- a/SistemaSublimas.Modelos/SistemaSublimas.Modelos.csproj
+++ b/SistemaSublimas.Modelos/SistemaSublimas.Modelos.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
